--- a/.env
+++ b/.env
@@ -28,14 +28,28 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=drusha092@gmail.com
+# MAIL_PASSWORD=dfbptqaeuaadfgov
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=null
+# MAIL_FROM_NAME="${APP_NAME}"
+
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=wmsu.testing@gmail.com
+MAIL_PASSWORD=ilgbybnzcnntjzix
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
