livewire, note,route

--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u904603351_wmsutec
-DB_USERNAME=u904603351_wmsutec
-DB_PASSWORD=Uwat09hanz@2
+DB_DATABASE=wmsu_testing
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
