--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "livewire-ui/modal": "^1.0",
         "livewire/livewire": "^2.12",
-        "symfony/mailer": "^5.4"
+        "symfony/mailer": "^5.4",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
